--- a/src/component/Admin.scss
+++ b/src/component/Admin.scss
@@ -1,6 +1,6 @@
 .comp1{
     display: flex;
-    background-color:red ;
+    background-color: white;
     align-items: center;
     justify-content: center;
     margin-left: 1.5rem;
@@ -8,4 +8,7 @@
     margin-bottom: 10px;
     border-radius: 14px;
     flex: 1;
+    .table{
+        width: full;
+    }
 }
