--- a/src/component/Ai.scss
+++ b/src/component/Ai.scss
@@ -1,8 +1,8 @@
 .comp{
     display: flex;
-    background-color:blue ;
+    background-color:white ;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     margin-bottom: 10px;
