--- a/src/component/Ai.scss
+++ b/src/component/Ai.scss
@@ -1,5 +1,6 @@
 .comp{
     display: flex;
+    flex-direction: row;
     background-color:white ;
     align-items: center;
     justify-content:center;
